[gd_scene load_steps=7 format=3 uid="uid://cmn65v4stypp1"]

[ext_resource type="Texture2D" uid="uid://bemyqo7hpjd6" path="res://Assets/Sprites_UI/iniciar_antes.jpg" id="1"]
[ext_resource type="Texture2D" uid="uid://c3ptfi4p0x5wj" path="res://Assets/Sprites_UI/icone-de-iniciacao_03.png" id="2"]
[ext_resource type="Script" path="res://Scenes/MenuPricipal.gd" id="3"]
[ext_resource type="FontFile" uid="uid://kl4wdhepfkym" path="res://Assets/Sprites_UI/Kenney Bold.ttf" id="4"]
[ext_resource type="PackedScene" path="res://Scenes/BotaoAudio.tscn" id="5"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="MenuPricipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("1")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -434.0
offset_right = 532.0
offset_bottom = 434.0
grow_vertical = 2
theme_override_constants/separation = 120
alignment = 1

[node name="Play" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")

[node name="Label" type="Label" parent="VBoxContainer/Play"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = SubResource("1")
text = "Play"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BotaoAudio" parent="VBoxContainer/Play" instance=ExtResource("5")]

[node name="Play2" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")

[node name="Label" type="Label" parent="VBoxContainer/Play2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = SubResource("1")
text = "How to Play"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BotaoAudio" parent="VBoxContainer/Play2" instance=ExtResource("5")]

[node name="Play3" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")

[node name="Label2" type="Label" parent="VBoxContainer/Play3"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = SubResource("1")
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BotaoAudio" parent="VBoxContainer/Play3" instance=ExtResource("5")]

[node name="Play4" type="TextureButton" parent="VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")

[node name="Label2" type="Label" parent="VBoxContainer/Play4"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = SubResource("1")
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BotaoAudio" parent="VBoxContainer/Play4" instance=ExtResource("5")]

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Play2" to="." method="_on_Play2_pressed"]
[connection signal="pressed" from="VBoxContainer/Play3" to="." method="_on_Play3_pressed"]
[connection signal="pressed" from="VBoxContainer/Play4" to="." method="_on_Play4_pressed"]
